--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,11 +2,11 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
 # CONFIG_ZMK_RGB_UNDERGLOW=y
@@ -15,3 +15,20 @@
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# --- Configurações para garantir suporte USB Serial (COM) ---
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_SERIAL=y
+CONFIG_USB_CDC_ACM=y
+
+# --- Tenta desabilitar o bloqueio inicial do ZMK Studio (OPÇÃO MAIS RECENTE) ---
+CONFIG_ZMK_STUDIO_LOCKING=n
+
+# --- Habilita o ZMK Studio (já habilitado via build.yaml, mas pode ficar aqui) ---
+CONFIG_ZMK_STUDIO=y
+
+# --- Habilita o split com fio via cabo P2 ---
+CONFIG_ZMK_SPLIT_WIRED=y
+
+# --- Habilita o driver I2C (geralmente já habilitado pelo .overlay) ---
+CONFIG_I2C=y
