--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,4 @@
-# This file generates the GitHub Actions matrix.
+# This file generates the GitHub Actions matrix
 # For simple board + shield combinations, add them to the top level board and
 # shield arrays, for more control, add individual board + shield combinations
 # to the `include` property. You can also use the `cmake-args` property to
@@ -18,8 +18,16 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+# ... (parte inicial do arquivo) ...
 include:
   - board: nice_nano_v2
     shield: sofle_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: sofle_left_with_oled
+
   - board: nice_nano_v2
     shield: sofle_right
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: sofle_right_with_oled
