--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -27,8 +27,13 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # --- Habilita o ZMK Studio (já habilitado via build.yaml, mas pode ficar aqui) ---
 CONFIG_ZMK_STUDIO=y
 
+# --- Habilita o suporte para teclado split ---
+CONFIG_ZMK_SPLIT=y
+
 # --- Habilita o split com fio via cabo P2 ---
 CONFIG_ZMK_SPLIT_WIRED=y
+
+
 
 # --- Habilita o driver I2C (geralmente já habilitado pelo .overlay) ---
 CONFIG_I2C=y
