--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -16,24 +16,17 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-# --- Configurações para garantir suporte USB Serial (COM) ---
+# USB Serial support for ZMK Studio
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_SERIAL=y
 CONFIG_USB_CDC_ACM=y
 
-# --- Tenta desabilitar o bloqueio inicial do ZMK Studio (OPÇÃO MAIS RECENTE) ---
+# ZMK Studio configuration
 CONFIG_ZMK_STUDIO_LOCKING=n
-
-# --- Habilita o ZMK Studio (já habilitado via build.yaml, mas pode ficar aqui) ---
 CONFIG_ZMK_STUDIO=y
 
-# --- Habilita o suporte para teclado split ---
+# Enable split keyboard support
 CONFIG_ZMK_SPLIT=y
 
-# --- Habilita o split com fio via cabo P2 ---
-CONFIG_ZMK_SPLIT_WIRED=y
-
-
-
-# --- Habilita o driver I2C (geralmente já habilitado pelo .overlay) ---
+# I2C driver support
 CONFIG_I2C=y
