--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -30,3 +30,8 @@ CONFIG_ZMK_SPLIT=y
 
 # I2C driver support
 CONFIG_I2C=y
+
+# Smarter power management settings
+CONFIG_ZMK_SLEEP=y                    # Enable deep sleep
+CONFIG_ZMK_IDLE_TIMEOUT=30000         # Idle after 30 seconds (turn off display/LEDs)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # Deep sleep after 15 minutes
