--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -32,6 +32,8 @@ CONFIG_ZMK_SPLIT=y
 CONFIG_I2C=y
 
 # Smarter power management settings
-CONFIG_ZMK_SLEEP=y                    # Enable deep sleep
-CONFIG_ZMK_IDLE_TIMEOUT=30000         # Idle after 30 seconds (turn off display/LEDs)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # Deep sleep after 15 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_EXT_POWER=y
