--- a/config/west.yml
+++ b/config/west.yml
@@ -1,6 +1,6 @@
 manifest:
   defaults:
-    revision: v0.2
+    revision: v0.3 # Change this!
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
@@ -9,9 +9,10 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
+      revision: v0.3 # Change this!
       import: app/west.yml
     - name: zmk-unicode
       remote: urob
-      revision: main
+      revision: v0.3 # Change this to match ZMK version!
   self:
     path: config
